# slint-layer-shell

./: Cargo.toml
src/: delegates.rs  lib.rs  platform.rs  window_adapter.rs
test/minimize-demo/: Cargo.toml
test/minimize-demo/src/: main.rs
test/weather-demo/: Cargo.toml  README.md  index.html
test/weather-demo/src/: app_main.rs  lib.rs  main.rs
test/weather-demo/src/weather/: dummyweather.json  dummyweathercontroller.rs  mod.rs  openweathercontroller.rs  weatherdisplaycontroller.rs
