# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: MIT

[package]
name = "slint-layer-shell-weather-demo"
version = "0.1.0"
edition = "2024"
build = "build.rs"
license = "MIT"

[dependencies]
async-std = "1.12.0"
chrono = { version = "0.4.38", optional = true, default-features = false, features = ["clock"] }
directories = "6.0"
log = "0.4.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
slint = { workspace = true }
slint-layer-shell = { path = "../.." }
env_logger = { version = "0.11.9" }

[build-dependencies]
slint-build = { version = "1.15.1" }

[features]
default = ["chrono"]

[[bin]]
name = "slint-layer-shell-weather-demo"
path = "src/main.rs"